<resources>
    <string name="app_name">Workout Logger</string>
    <string name="action_settings">Settings</string>
    <string name="workouts">Workouts</string>
    <string name="exercises">Exercises</string>
    <string name="history">History</string>
    <string name="title_activity_workouts">Workouts</string>
    <string name="title_activity_create_workout">Create workout</string>
    <string name="title_activity_exercises">Exercises</string>
    <string name="title_activity_muscle_group">Exercise Group</string>
    <string name="title_activity_create_exercise">Create exercise</string>
    <string name="exercise_name">Exercise name</string>
    <string name="select_exercise_type">Select exercise type:</string>
    <string name="select_exercise_group">Select exercise group:</string>
    <string name="create_exercise_group">Create exercise group</string>
    <string name="save">Save</string>
    <string name="exercise_group_name_hint">Enter exercise group name</string>
    <string name="search_exercise">Search for exercise...</string>
    <string name="search">Search</string>
    <string name="exercises_found">Exercises found</string>
    <string name="create_set_group">Create set group</string>
    <string name="add_exercise">Add exercise</string>
    <string name="enter_set_group_name">Enter set group name</string>
    <string name="title_activity_create_set_group">Create set group</string>
    <string name="title_activity_set_details">Set Details</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="rest">Rest(sec)</string>
    <string name="add_set_group_button">Add set</string>
    <string name="save_workout_button">Save workout</string>
    <string name="enter_workout_name">Enter workout name</string>
    <string name="save_set_group_button">Save set</string>
    <string name="nr">Nr.</string>
    <string name="exercise">Exercise</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="title_activity_workout_log">Logging</string>
    <string name="notes">Enter notes...</string>
    <string name="time">Time(sec)</string>
    <string name="time_noSec">Time</string>
    <string name="update">UPDATE</string>
    <string name="edit">Edit</string>
    <string name="finish">Finish</string>
    <string name="go_back">Go Back</string>
    <string name="title_activity_workouts_history">WorkoutsHistory</string>
    <string name="title_activity_workout_history">WorkoutHistory</string>
    <string name="notes_exLV">Notes</string>
    <string name="rest_noSec">Rest</string>
    <string name="stop">Stop</string>
    <string name="how_many">How many to add</string>
    <string name="save_backup">Save backup</string>
    <string name="load_backup">Load backup</string>
    <string name="load">Load</string>
    <string name="reoder">Reorder</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="enter_date">Enter date or press button above to choose</string>
    <string name="all">All</string>
    <string name="that_week">full week</string>
    <string name="change_current">Change current</string>
    <string name="add_next">Add next</string>
    <string name="skip">Skip</string>
    <string name="insert">Insert</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
</resources>
