<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/table"
    android:shrinkColumns="0,2,3,4"
    android:stretchColumns="1">

    <TableRow
        android:background="@color/primary_light"
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/setGroupName"
            android:layout_span="5"
            android:padding="2dp"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/divider">

        <TextView
            android:layout_column="0"
            android:padding="2dp"
            android:text="@string/nr" />

        <TextView
            android:layout_column="1"
            android:layout_width="20sp"
            android:padding="2dp"
            android:text="@string/exercise" />

        <TextView
            android:layout_column="2"
            android:padding="2dp"
            android:text="@string/reps" />

        <TextView
            android:layout_column="3"
            android:padding="2dp"
            android:text="@string/weight" />

        <TextView
            android:layout_column="4"
            android:padding="2dp"
            android:text="@string/rest" />
    </TableRow>
</TableLayout>