<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".workouts.CreateWorkoutActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_create_workout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editText"
            android:hint="@string/enter_workout_name"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:imeOptions="flagNoExtractUi"
            android:singleLine="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/editName"
            android:layout_toStartOf="@+id/editName"/>
        <Button
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/setGroupName"/>


    </RelativeLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/setsGroupsList"
        android:dividerHeight="10dp"
        android:divider="#ffffff"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:weightSum="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/create_workout_buttons_height"
            android:id="@+id/addSetGroup"
            android:text="@string/add_set_group_button"
            android:textColor="@color/secondary_text"
            android:background="@drawable/add_set_button_shape"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/create_workout_buttons_height"
            android:id="@+id/saveWorkout"
            android:text="@string/save"
            android:background="@drawable/save_workout_button_shape"
            android:textColor="@color/secondary_text"
            android:textSize="15sp"
            android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>
