<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dainavahood.workoutlogger.workouts.SetDetailsActivity"
    tools:showIn="@layout/activity_set_details"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exerciseName"
        android:layout_centerHorizontal="true"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/exerciseName"
        android:layout_centerHorizontal="true"
        android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginTop="@dimen/reps_weight_rest_margin_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reps"
                        android:id="@+id/repsName"
                        android:layout_centerHorizontal="true"
                        android:textSize="@dimen/reps_weight_rest_text_size" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="3"
                        android:text="0"
                        android:textAlignment="center"
                        android:id="@+id/editReps"
                        android:layout_below="@+id/repsName"
                        android:layout_centerHorizontal="true"
                        android:imeOptions="flagNoExtractUi"
                        android:singleLine="true" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_minus"
                        android:id="@+id/minus1"
                        android:layout_toLeftOf="@+id/editReps"
                        android:layout_toStartOf="@id/editReps"
                        android:layout_alignBaseline="@+id/editReps" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_plus"
                        android:id="@+id/plus1"
                        android:layout_toRightOf="@id/editReps"
                        android:layout_toEndOf="@+id/editReps"
                        android:layout_alignBaseline="@+id/editReps" />

                    <!--*****************************************************************-->

                    <TextView
                        android:layout_marginTop="@dimen/reps_weight_rest_margin_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:id="@+id/weightName"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/editReps"
                        android:textSize="@dimen/reps_weight_rest_text_size" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:numeric="integer|decimal"
                        android:ems="3"
                        android:text="0"
                        android:id="@+id/editWeight"
                        android:layout_below="@+id/weightName"
                        android:layout_centerHorizontal="true"
                        android:imeOptions="flagNoExtractUi" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_minus"
                        android:id="@+id/minus2"
                        android:layout_toLeftOf="@+id/editWeight"
                        android:layout_toStartOf="@id/editWeight"
                        android:layout_alignBaseline="@+id/editWeight" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_plus"
                        android:id="@+id/plus2"
                        android:layout_toRightOf="@id/editWeight"
                        android:layout_toEndOf="@+id/editWeight"
                        android:layout_alignBaseline="@+id/editWeight" />

                    <!--*******************************************************-->

                    <TextView
                        android:layout_marginTop="@dimen/reps_weight_rest_margin_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rest"
                        android:id="@+id/restName"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/editWeight"
                        android:textSize="@dimen/reps_weight_rest_text_size" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="3"
                        android:text="60"
                        android:id="@+id/editRest"
                        android:layout_below="@+id/restName"
                        android:layout_centerHorizontal="true"
                        android:imeOptions="flagNoExtractUi" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_minus"
                        android:id="@+id/minus3"
                        android:layout_toLeftOf="@+id/editRest"
                        android:layout_toStartOf="@id/editRest"
                        android:layout_alignBaseline="@+id/editRest" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_plus"
                        android:id="@+id/plus3"
                        android:layout_toRightOf="@id/editRest"
                        android:layout_toEndOf="@+id/editRest"
                        android:layout_alignBaseline="@+id/editRest" />

                    <!--*******************************************************************-->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editRest"
                    android:id="@+id/howManyLayout">

                    <TextView
                        android:layout_marginTop="@dimen/reps_weight_rest_margin_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/how_many"
                        android:id="@+id/howManyName"
                        android:layout_centerHorizontal="true"
                        android:textSize="@dimen/reps_weight_rest_text_size" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="3"
                        android:text="1"
                        android:textAlignment="center"
                        android:id="@+id/editHowMany"
                        android:layout_below="@+id/howManyName"
                        android:layout_centerHorizontal="true"
                        android:imeOptions="flagNoExtractUi" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_minus"
                        android:id="@+id/minus4"
                        android:layout_toLeftOf="@+id/editHowMany"
                        android:layout_toStartOf="@id/editHowMany"
                        android:layout_alignBaseline="@+id/editHowMany" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_plus"
                        android:id="@+id/plus4"
                        android:layout_toRightOf="@id/editHowMany"
                        android:layout_toEndOf="@+id/editHowMany"
                        android:layout_alignBaseline="@+id/editHowMany" />

                </RelativeLayout>

                <!--*******************************************************************-->

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:id="@+id/saveSet"
                        android:background="@drawable/save_button_shape"
                        android:textColor="@color/secondary_text"
                        android:layout_below="@id/howManyLayout"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/reps_weight_rest_margin_top" />

            </RelativeLayout>
    </ScrollView>
</RelativeLayout>
